--- a/summary.html
+++ b/summary.html
@@ -8,7 +8,7 @@
   
   <title>Frontend Mentor | Multi-step form</title>
   <link rel="stylesheet" href="styles.css">
-  <script type="module" src="mainapp.js"></script>
+  <script  src="mainapp.js"></script>
 </head>
 <body>
   <article>
